# cd_to_apple_book

./: README.md  apple_prereq.sh  example_contract.yml  pyproject.toml
src/cd_to_apple_book/: importer.py  main.py  musicbrainz.py  ripper.py  util.py
